# COMP30271-PORTFOLIO-2

./: README.md
ntu_robotsim/: CMakeLists.txt  package.xml
ntu_robotsim/config/: single_robot_maze_sim.yaml  single_robot_ros_gz_bridge.yaml
ntu_robotsim/config/nav2/: amcl.yaml  nav2_params.yaml  nav2_params.yaml.save  nav2_view.rviz
ntu_robotsim/launch/: maze.launch.py  single_robot_sim.launch.py  spawn_robot.launch.py
ntu_robotsim/launch/navigation/: navigation.launch.py
ntu_robotsim/launch/navigation/include/: amcl.launch.py  nav2_core.launch.py
ntu_robotsim/map/: map.pgm  map.yaml
ntu_robotsim/models/jetbot/: model.sdf
ntu_robotsim/scripts/: waypoint_mission.py
ntu_robotsim/urdf/: jetbot.urdf
ntu_robotsim/worlds/maze/: maze.sdf
